fixed alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -71,28 +71,35 @@ nav {
 
 /*INTRO*/
 
+.intro-intro-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 .intro-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 5em 0;
- max-width: 550px;
+ max-width: 520px;
  margin: 0 auto;
 }
 
 
 .title1 {
+ margin-bottom: 40px;
  text-align: left;
  font-weight: normal;
- font-size: 42px;
+ font-size: 50px;
  font-family: 'Usual', sans-serif;
  color: #333;
 }
 
 
 .title2 {
- margin: 30px 10px;
- font-size: 20px;
+ font-size: 24px;
+ margin-bottom: 40px;
  font-weight: normal;
  font-family: 'Usual', sans-serif;
  color: #333;
@@ -100,12 +107,11 @@ nav {
 }
 
 .blurb {
- display: flex;
- margin: 0 15px;
- font-size: 20px;
+ font-size: 18px;
  font-weight: 100;
+ margin-bottom: 40px;
  font-family: 'Usual', sans-serif;
- color: #333;
+ color: #646466;
  text-align: left;
  line-height: 30px;
 }
@@ -113,8 +119,8 @@ nav {
 .button1 {
   box-sizing: border-box;
   text-decoration: none;
-  padding: 10px;
-  margin: 20px 10px 0 0;
+  padding: 10px 10px;
+  margin: 20px 10px 5px 5px;
   border: 1px solid #333;
   border-radius: 100px;
   font-size: 16px;
